syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ShopGoods.proto";

// CmdId: 737
// EnetChannelId: 0
// EnetIsReliable: true
message BuyGoodsRsp {
	int32 retcode = 15;
	uint32 shop_type = 12;
	ShopGoods goods = 13;
	uint32 buy_count = 8;
	repeated ShopGoods goods_list = 1;
}
